--- a/AppVikings.Offended/AmIOffended/AmIOffended/App.xaml
+++ b/AppVikings.Offended/AmIOffended/AmIOffended/App.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AmIOffended.App">
+             x:Class="AmIOffended.App.Core"
+             xmlns:d="clr-namespace:MvvmCross.Forms;assembly=MvvmCross.Forms">
 	<Application.Resources>
 
 		<!-- Application resource dictionary -->
